--- a/goPomelo/index.html
+++ b/goPomelo/index.html
@@ -18,10 +18,10 @@
 			</li>
 		</ul>
 	</header>
-	<div class="css_container css_flex-container">
+	<div class="css_container">
 		<aside id="toggleSideBar" class="css_default-transition"></aside>
 		<article class="css_default-transition">
-			<div class="css_map-container _js_map-container">
+			<div class="css_map-container _js_map-container css_default-transition">
 				<div id="mapview" class="css_map-container"></div>
 			</div>
 		</article>
