--- a/goPomelo/index.html
+++ b/goPomelo/index.html
@@ -7,7 +7,8 @@
 	<link rel="stylesheet" href="../libraries/css/normalize.css">
 	<link rel="stylesheet" href="../libraries/fontawesome/css/font-awesome.css">
 	<link rel="stylesheet" href="css/style.css">
-	<title>Lotus Locator</title>
+	<title>SCB Locator</title>
+	<link rel="icon" href="images/favicon.ico" type="image/ico">
 </head>
 <body>
 <div class="css_main-wrapper bg_primary">
@@ -19,7 +20,20 @@
 		</ul>
 	</header>
 	<div class="css_container">
-		<aside id="toggleSideBar" class="css_default-transition"></aside>
+		<aside id="toggleSideBar" class="css_default-transition">
+		<div class="css_setting-container">
+		<a><img src="images/scb_bank.png"/>
+		<span>SCB Locator</span>
+		</a>
+		<h3>Filters</h3>
+		<ul class="css_filter-list">
+		<li class="css_default-transition"><label><input class="_js_filter-input" type=checkbox  value="atm"/><i class="fa fa-check"></i>SCB ATM<label></li>
+		<li class="css_default-transition"><label><input class="_js_filter-input" type=checkbox  value="cdm"/><i class="fa fa-check"></i>SCB CDM<label></li>
+		<li class="css_default-transition"><label><input class="_js_filter-input" type=checkbox  value="exchange"/><i class="fa fa-check"></i>SCB Exchange<label></li>
+		<li class="css_default-transition"><label><input class="_js_filter-input" type=checkbox  value="bank"/><i class="fa fa-check"></i>SCB Bank<label></li>
+		</ul>
+		</div>
+		</aside>
 		<article class="css_default-transition">
 			<div class="css_map-container _js_map-container css_default-transition">
 				<div id="mapview" class="css_map-container"></div>
@@ -28,7 +42,7 @@
 	</div>
 </div>
 <script src="../libraries/js/jquery/jquery-3.1.1.min.js"></script> <!-- jQuery -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6LcCO3CzZFBy0oYZ1t7YCjXWfrlN5Msk&libraries=places,visualization"></script>
 <script src="js/main.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6LcCO3CzZFBy0oYZ1t7YCjXWfrlN5Msk&callback=initMap&libraries=places,visualization" async defer></script>
 </body>
 </html>
